# tue_config

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml
include/tue/config/: binary_reader.h  binary_writer.h  configuration.h  data.h  data_pointer.h  label.h  map.h  node.h  node_type.h  read.h  reader.h  reader_writer.h  resolve_config.h  sequence.h  types.h  variant.h  write.h  writer.h  yaml_emitter.h
include/tue/config/loaders/: sdf.h  xml.h  yaml.h
include/tue/config2/: data.h  data_reader.h  data_writer.h  emitter.h  error.h  json.h  json_writer.h  reader.h  writer.h  yaml.h
src/: binary_reader.cpp  binary_writer.cpp  config_data.h  config_set.h  configuration.cpp  data.cpp  data_pointer.cpp  map.cpp  node.cpp  read.cpp  reader.cpp  reader_writer.cpp  sequence.cpp  write.cpp  writer.cpp  yaml_emitter.cpp
src/config2/: data_reader.cpp  data_writer.cpp  emitter.cpp  error.cpp  json.cpp  json_writer.cpp  reader.cpp  writer.cpp  yaml.cpp
src/loaders/: loader_functions.cpp  loader_functions.h  resolve_functions.cpp  resolve_functions.h  sdf.cpp  xml.cpp  yaml.cpp
src/tue_config/: configuration.py
test/: model.sdf  sdf_gtest.cpp  test-output.txt  test.bash  test.cpp  test2.cpp  test_config.cpp  test_read_and_show.cpp  test_sdf_and_show.cpp  test_variant.cpp  test_xml_and_show.cpp  test_yaml_and_show.cpp
tools/: generate-config
