<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tue_config</name>
  <version>0.0.0</version>
  <description>The tue_config package</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>roslib</depend>
  <depend>tinyxml2</depend>
  <depend>tue_filesystem</depend>
  <depend>yaml-cpp</depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <test_depend>rosunit</test_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
