<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tue_config</name>
  <version>0.0.0</version>
  <description>Read and write (binary) configurations</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>libboost-dev</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>tinyxml2</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>python3-yaml</exec_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>clang-format-21</test_depend>
  <test_depend>clang-tidy-21</test_depend>
  <test_depend>tue_lint_config</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
